--- a/MqttBlazor/Client/Shared/NavMenu.razor
+++ b/MqttBlazor/Client/Shared/NavMenu.razor
@@ -23,6 +23,10 @@
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
+        </div>        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="mqttConnetct">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Mqtt
+            </NavLink>
         </div>
     </nav>
 </div>
