--- a/MqttBlazor/Client/_Imports.razor
+++ b/MqttBlazor/Client/_Imports.razor
@@ -10,4 +10,5 @@
 @using MqttBlazor.Client.Shared
 
 
-@inject MqttService _mqttService
+@inject IMqttService _mqttService
+@*@inject InfluxDbClientWrapper _influxDbClientWrapper*@
