--- a/MqttBlazor/Client/_Imports.razor
+++ b/MqttBlazor/Client/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using MqttBlazor.Client
 @using MqttBlazor.Client.Shared
+@using ApexCharts
 
 
 @inject IMqttService _mqttService
